check_DATA = \
	bad-cat1.cue   \
	bad-cat1.toc   \
	bad-cat2.cue   \
	bad-cat2.toc   \
	bad-cat3.cue   \
	bad-cat3.toc   \
	bad-file.toc   \
	bad-mode1.cue  \
	bad-mode1.toc  \
	bad-msf-1.cue  \
	bad-msf-1.toc  \
	bad-msf-2.cue  \
	bad-msf-2.toc  \
	bad-msf-3.cue  \
	bad-msf-3.toc  \
	cdda.bin       \
	cdda.cue       \
	cdda.toc       \
	copying-rr.iso \
	copying.iso    \
	data1.toc      \
	data2.toc      \
	isofs-m1.bin   \
	isofs-m1.cue   \
	isofs-m1.toc   \
	joliet.iso     \
	p1.bin         \
	p1.cue         \
	p1.nrg	       \
	t1.toc         \
	t2.toc         \
	t3.toc         \
	t4.toc         \
	t5.toc         \
	t6.toc         \
	t7.toc         \
	t8.toc         \
	t9.toc         \
	vcd2.toc       \
	videocd.nrg    \
        cdtext.toc     \
        data5.toc      \
        data6.toc      \
        data7.toc

EXTRA_DIST = $(check_DATA)
